# agentic_travel_planner

./: .dockerignore  .gitignore  Dockerfile  QUICKSTART.md  README.md  pyproject.toml
data/chroma/: chroma.sqlite3
data/operations/: plans.db
examples/: ragas_cases.json  rome_manifest.json
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ui-deployment.yaml  ui-service.yaml
src/agentic_tour_planner/: __init__.py
src/agentic_tour_planner/api/: main.py
src/agentic_tour_planner/app/: streamlit_app.py
src/agentic_tour_planner/config/: settings.py
src/agentic_tour_planner/domain/: models.py
src/agentic_tour_planner/evaluation/: cli.py  ragas_pipeline.py
src/agentic_tour_planner/ingestion/: cli.py  connectors.py  crawler.py  manifest.py  service.py
src/agentic_tour_planner/llm/: provider.py
src/agentic_tour_planner/observability/: langsmith.py  metrics.py
src/agentic_tour_planner/pipeline/: __init__.py  agentic_pipeline.py  graph.py  prompts.py
src/agentic_tour_planner/retrieval/: chunker.py  reranker.py  vector_store.py
src/agentic_tour_planner/services/: planner.py  planning_workers.py
src/agentic_tour_planner/storage/: ingestion_store.py  sqlite_store.py
src/agentic_tour_planner/tools/: __init__.py  place_intel.py  weather.py  web_search.py
src/agentic_tour_planner/utils/: logging.py
src/project_folder/data/: research.md
src/project_folder/notebooks/: tour_planner.ipynb
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_evaluation_pipeline.py  test_llm_provider.py  test_manifest.py  test_models.py  test_pipeline.py  test_planning_workers.py  test_reranker.py  test_store.py
