[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "agentic-travel-planner"
version = "0.1.0"
description = "Production-oriented agentic travel planner with ingestion, retrieval, planning workers, and RAG evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Prithwijit" }]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.15",
  "duckduckgo-search>=8.0.0",
  "fastapi>=0.115.0",
  "fastembed>=0.3.6",
  "httpx>=0.27.2",
  "langchain-core>=0.3.25",
  "langchain-google-genai>=2.0.6",
  "langchain-ollama>=0.2.1",
  "langchain-openai>=0.2.10",
  "langgraph>=0.2.56",
  "lxml>=6.0.2; python_version >= '3.14'",
  "prometheus-client>=0.21.0",
  "pydantic-settings>=2.6.1",
  "pydantic>=2.10.2",
  "ragas>=0.2.6",
  "streamlit>=1.40.2",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "trafilatura>=1.12.2",
  "typer>=0.15.1",
  "uvicorn>=0.32.1",
  "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
crawl = [
  "crawl4ai>=0.4.24; python_version < '3.14'",
]

[project.scripts]
tour-planner-api = "agentic_tour_planner.api.main:run"
tour-planner-ui = "agentic_tour_planner.app.streamlit_app:run"
tour-planner-ingest = "agentic_tour_planner.ingestion.cli:app"
tour-planner-eval = "agentic_tour_planner.evaluation.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_tour_planner"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
